Add livereload and sass

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -20,5 +20,10 @@ Normalizing styles have been helped along thanks to the fine work of
 Nicolas Gallagher and Jonathan Neal http://necolas.github.com/normalize.css/
 */
 
+h1 {
+  size: 500px;
+}
 
-/*# sourceMappingURL=style.css.map */
+a{
+  color: green;
+}
