--- a/sass/style.scss
+++ b/sass/style.scss
@@ -19,11 +19,4 @@ Underscores is distributed under the terms of the GNU GPL v2 or later.
 Normalizing styles have been helped along thanks to the fine work of
 Nicolas Gallagher and Jonathan Neal http://necolas.github.com/normalize.css/
 */
-
-h1 {
-  size: 500px;
-}
-
-a{
-  color: green;
-}
+@import "../bower_components/bootstrap-sass/assets/stylesheets/_bootstrap.scss";
